--- a/tucano.vcxproj
+++ b/tucano.vcxproj
@@ -174,6 +174,17 @@
     <ClCompile Include="src\utils_pgn.c" />
     <ClCompile Include="src\zkeys.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="image\tucano.bmp" />
+    <Image Include="image\tucano_playing.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="copying.txt" />
+    <Text Include="readme.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
