--- a/tucano.vcxproj
+++ b/tucano.vcxproj
@@ -121,7 +121,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <CompileAs>CompileAsC</CompileAs>
       <WarningLevel>EnableAllWarnings</WarningLevel>
-      <PreprocessorDefinitions>VS2017;EGTB_SYZYGY</PreprocessorDefinitions>
+      <PreprocessorDefinitions>VS2017;EGTB_SYZYGYxx</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)OBJ\</ObjectFileName>
       <Optimization>Full</Optimization>
     </ClCompile>
@@ -162,6 +162,7 @@
     <ClCompile Include="src\move.c" />
     <ClCompile Include="src\move_order.c" />
     <ClCompile Include="src\move_selector.c" />
+    <ClCompile Include="src\protocol_uci.c" />
     <ClCompile Include="src\search_egtb_syzygy.c" />
     <ClCompile Include="src\search_main.c" />
     <ClCompile Include="src\search_pv.c" />
