--- a/tucano.vcxproj.filters
+++ b/tucano.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="src\fathom\tbcore.c">
       <Filter>src\fathom</Filter>
     </ClCompile>
+    <ClCompile Include="src\protocol_uci.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="image\tucano.bmp">
