Added depth reduction for non-pv nodes when position is not on transposition table (idea from Prodeo) Added makefile in src folder.
12s+0.12: Score of tucano902 vs tucano901: 622 - 552 - 1744  [0.512] 2918
Elo difference: 8.34 +/- 7.98
SPRT: llr 2.95, lbound -2.94, ubound 2.94 - H1 was accepted

60s+0.6: Score of tucano902 vs tucano901: 414 - 356 - 1548  [0.513] 2318
Elo difference: 8.70 +/- 8.14
SPRT: llr 2.96, lbound -2.94, ubound 2.94 - H1 was accepted

--- a/tucano.vcxproj
+++ b/tucano.vcxproj
@@ -199,6 +199,7 @@
     <None Include="README.md" />
     <None Include="src\fathom\LICENSE" />
     <None Include="src\fathom\README.md" />
+    <None Include="src\makefile" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
