--- a/tucano.vcxproj.filters
+++ b/tucano.vcxproj.filters
@@ -200,5 +200,8 @@
     <None Include="src\fathom\README.md">
       <Filter>src\fathom</Filter>
     </None>
+    <None Include="src\makefile">
+      <Filter>src</Filter>
+    </None>
   </ItemGroup>
 </Project>
