--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,9 @@
 # Tucano makefile (linux, ARMV8)
 
 CC = gcc
-CFLAGS = -std=c99 -O3 -DEGTB_SYZYGY -Wall -Wextra -march=native -flto -lpthread -lm
+CFLAGS = -std=c99 -O3 -DEGTB_SYZYGY -Wall -Wextra -march=native -flto 
+LFLAGS = -lpthread -lm
 EXE = tucano
 
 release:
-	$(CC) $(CFLAGS) -o $(EXE) *.c fathom/tbprobe.c 
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE) $(LFLAGS)
