Can use lazy eval for is improving evaluation heuristics. 60+0.6s Score of tucano910 vs tucano909: 742 - 675 - 2305  [0.509] 3722 Elo difference: 6.25 +/- 6.88 SPRT: llr 2.98, lbound -2.94, ubound 2.94 - H1 was accepted

--- a/tucano.vcxproj
+++ b/tucano.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\eval_param.c" />
     <ClCompile Include="src\eval_passed.c" />
     <ClCompile Include="src\eval_pawn.c" />
+    <ClCompile Include="src\eval_pawn_nn.c" />
     <ClCompile Include="src\eval_pieces.c" />
     <ClCompile Include="src\eval_pst.c" />
     <ClCompile Include="src\eval_utils.c" />
