Change king and queen pst to be symetrical.
12+0.12s
Score of tucano914 vs tucano913: 3287 - 3327 - 7709  [0.499] 14323

60+0.6s
Score of tucano914 vs tucano913: 126 - 115 - 378  [0.509] 619

--- a/tucano.vcxproj
+++ b/tucano.vcxproj
@@ -129,6 +129,11 @@
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\fathom\tbconfig.h" />
     <ClInclude Include="src\fathom\tbprobe.h" />
