Tucano version 10: Neural Network evaluation. Score of tucano1000 vs tucano900: 2194 - 314 - 802  [0.784] 3310 Elo difference: 223.93 +/- 11.52

--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,9 @@ __pycache__/
 /tune-pnn.txt
 /src-search-change.zip
 /eval_pawn_nn.h
+/tucano_avx2.exe
+/tucano_base.exe
+/tucano_sse4.exe
+/tucano_sse2.exe
+/tucano_sse3.exe
+*.exe
