--- a/src/makefile
+++ b/src/makefile
@@ -1,9 +1,21 @@
 # Tucano makefile (linux, ARMV8)
 
 CC = gcc
-CFLAGS = -std=c99 -O3 -DEGTB_SYZYGY -Wall -Wextra -march=native -flto 
+CFLAGS = -O3 -DEGTB_SYZYGY -Wall -Wextra -march=native -flto 
 LFLAGS = -lpthread -lm
 EXE = tucano
 
-release:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE) $(LFLAGS)
+old:
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_old $(LFLAGS) -DTUCANNUE
+
+avx2:
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_avx2 $(LFLAGS) -DTUCANNUE -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
+	
+sse4:
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse4 $(LFLAGS) -DTUCANNUE -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
+
+sse3:
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse3 $(LFLAGS) -DTUCANNUE -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
+
+sse2:
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse2 $(LFLAGS) -DTUCANNUE -DUSE_SSE2 -msse2 -DUSE_SSE -msse
