--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,9 @@ ipch/
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
+*.sln
+*.vcxproj
+*.vcxproj.filters
 
 # Visual Studio profiler
 *.psess
@@ -283,3 +286,4 @@ __pycache__/
 /tucano_sse2.exe
 /tucano_sse3.exe
 *.exe
+*.bat
