--- a/src/makefile
+++ b/src/makefile
@@ -6,16 +6,10 @@ LFLAGS = -lpthread -lm
 EXE = tucano
 
 old:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_old $(LFLAGS) -DTUCANNUE
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_old $(LFLAGS)
 
 avx2:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_avx2 $(LFLAGS) -DTUCANNUE -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_avx2 $(LFLAGS) -DTNNAVX2 -mavx2 -msse4.1 -mssse3 -msse2 -msse
 	
 sse4:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse4 $(LFLAGS) -DTUCANNUE -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
-
-sse3:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse3 $(LFLAGS) -DTUCANNUE -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
-
-sse2:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c nnue/*.cpp -o $(EXE)_sse2 $(LFLAGS) -DTUCANNUE -DUSE_SSE2 -msse2 -DUSE_SSE -msse
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_sse4 $(LFLAGS) -DTNNSSE4 -msse4.1 -mssse3 -msse2 -msse
