Update files for version 12.00 release.

--- a/src/makefile
+++ b/src/makefile
@@ -9,7 +9,7 @@ old:
 	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_old $(LFLAGS)
 
 avx2:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_avx2 $(LFLAGS) -DTNNAVX2 -mavx2 -msse4.1 -mssse3 -msse2 -msse
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_avx2 $(LFLAGS) -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
 	
 sse4:
-	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_sse4 $(LFLAGS) -DTNNSSE4 -msse4.1 -mssse3 -msse2 -msse
+	$(CC) $(CFLAGS) *.c fathom/tbprobe.c -o $(EXE)_sse4 $(LFLAGS) -DUSE_SSE41 -msse4.1 -DUSE_SSSE3 -mssse3 -DUSE_SSE2 -msse2 -DUSE_SSE -msse
